deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lnmonja
  labels:
    name: lnmonja
